Clarify execution boundaries before database adapter choice
Constraint: Release 1.11 excludes the develop-only Druid adapter and keeps analytical transaction caveats explicit.
Rejected: Treating SQL syntax compatibility as proof of transaction or DDL parity | Each adapter now documents only tag-backed behavior.
Confidence: high
Scope-risk: moderate
Directive: Extend the matrix only after a module is present in the target stable release and has source-backed tests.
Tested: 27 Ruby contract runs with 323 assertions; authoring and 352-link 1.11 release validators; deterministic manifest export; XML, CairoSVG, connector, geometry, endpoint, mixed-corner, and original-size PNG review; git diff --check.
Not-tested: Production Kotlin tests and live database benchmarks were not run because this task changes documentation only.